# spis2022-0824-try-bootstrap-flask-mongodb

./: .gitignore  main.py  pyproject.toml
templates/: flash_messages.html  home.html  interests.html  layout.html  link2.html  login-logout.html  navbar.html
