[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
GitHub-Flask = "^3.2.0"
Flask-Session = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
Flask-Bootstrap = "^3.3.7"
Bootstrap-Flask = "^2.1.0"
pymongo = "^4.2.0"
dnspython = "^2.2.1"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"